# bose-dfu

./: 70-bose-dfu.rules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release_artifacts.yml
src/: device_ids.rs  dfu_file.rs  lib.rs  main.rs  protocol.rs
test_data/dfu/: bad_crc.dfu  correct.dfu  long_suffix.dfu  not_dfu.dfu  short_suffix.dfu  too_long_suffix.dfu  too_old.dfu  wildcard_vid.dfu
