[package]
name = "bose-dfu"
version = "0.1.0"
license = "MIT"

description = "Firmware updater for various Bose devices"
authors = ["Thomas Hebb <tommyhebb@gmail.com>"]
repository = "https://github.com/tchebb/bose-dfu"
categories = ["command-line-utilities"]

edition = "2021"

[dependencies]
hidapi = {version = "1.3", default-features = false, features = ["linux-static-hidraw", "illumos-static-libusb"]}
anyhow = "1.0"
thiserror = "1.0"
num_enum = "0.5"
byteorder = "1.3"
log = "0.4"
env_logger = "0.9"
crc32fast = "1.2"

# Only required for binary
clap = { version = "3.1", features = ["derive"] }

[profile.release]
strip = "symbols"
lto = "fat"
