[package]
name = "bose-dfu"
version = "1.1.0"
license = "MIT"

description = "Firmware updater for various Bose devices"
authors = ["Thomas Hebb <tommyhebb@gmail.com>"]
repository = "https://github.com/tchebb/bose-dfu"
categories = ["command-line-utilities"]

edition = "2024"

exclude = ["/.github", "/test_data"]

[dependencies]
hidapi = "2.0"
thiserror = "2.0"
num_enum = "0.7"
byteorder = "1.3"
log = "0.4"
crc32fast = "1.2"

# Only required for binary
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
rustyline = "16.0.0"

[profile.release]
strip = "symbols"
lto = "fat"
